--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto+Condensed';
+
+
 body {
   margin: 0 auto;
   max-width: 50em;
-  font-family: "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Helvetica", "Arial", sans-serif;
    line-height: 1.5;
   padding: 4em 1em;
+    background-color: #263d36;
+
    color: #555;
 }
+
+header {
+  background-color: #263d36;
+
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  line-height: 1.2;
+  padding: 10vw 2em;
+  text-align: center;
+}
+
+header h1 {
+  color: white;
+  font-size: 2.5em;
+  font-weight: 300;
+}
+
 
 h2 {
   margin-top: 1em;
