--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Over+the+Rainbow');
+@import url('https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo');
 
 *{
 	background-color: #e0ebe8;
 }
 h1#header{
-	font-family: 'Over the Rainbow', cursive;
+    font-family: 'Swanky and Moo Moo', cursive;
 	color: #4AB19A;
 	letter-spacing: 10px;
 	font-size: 80px
 }
 h1#beforeheader{
-	font-family: 'Over the Rainbow', cursive;
+    font-family: 'Swanky and Moo Moo', cursive;
 	color: #4AB19A;
 	letter-spacing: 10px;
 	font-size: 80px
