--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-@import url('https://fonts.googleapis.com/css?family=Over+the+Rainbow');
-@import url('https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo');
+/*@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');*/
+@import url('https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo|Bungee+Inline');
 
 *{
 	background-color: #e0ebe8;
+}
+div#wrapper{
+	min-width: 600px;
 }
 h1#header{
     font-family: 'Swanky and Moo Moo', cursive;
 	color: #4AB19A;
 	letter-spacing: 10px;
-	font-size: 80px
+	font-size: 400%;
 }
 h1#beforeheader{
     font-family: 'Swanky and Moo Moo', cursive;
@@ -46,7 +48,7 @@ div#menu li{
 }
 @keyframes flicker{
 	50%{
-		color: red;
+		color: transparent;
 	}
 }
 a{
@@ -58,4 +60,37 @@ a:hover{
 	animation: flicker;
 	animation-duration: 0.5s;
 	animation-iteration-count: infinite;
+}
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    opacity: 0;-moz-opacity: 0;-ms-opacity: 0;-o-opacity: 0;-webkit-opacity: 0;
+	filter: alpha(opacity=50);
+	-webkit-transition:all 0.4s ease;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.tooltip:hover .tooltiptext {
+    opacity: 1;-moz-opacity: 1;-ms-opacity: 1;-o-opacity: 1;-webkit-opacity: 1;
+	filter: alpha(opacity=100);
+	-webkit-transition:all 0.4s ease;
+}
+
+.tooltiptext{
+	font-family: 'Bungee Inline', cursive;
 }
