--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /*@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');*/
-@import url('https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo|Bungee+Inline');
+@import url('https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo|Bungee+Inline|Strait|Indie+Flower');
 
 *{
 	background-color: #e0ebe8;
@@ -93,4 +93,47 @@ a:hover{
 
 .tooltiptext{
 	font-family: 'Bungee Inline', cursive;
+}
+.fa-facebook:hover{
+	color: #3b5998;
+	-webkit-transition:all 0.5s ease;
+}
+.fa-github{
+	background-color: white;
+	border-radius: 100px;
+}
+.fa-github:hover{
+	color: white;
+	background-color: black;
+	border-radius: 100px;
+}
+.fa-envelope:hover{
+	color: red;
+}
+.tooltip2 {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip2 .tooltiptext {
+    opacity: 0;-moz-opacity: 0;-ms-opacity: 0;-o-opacity: 0;-webkit-opacity: 0;
+	filter: alpha(opacity=50);
+	-webkit-transition:all 0.4s ease;
+    width: auto;
+    color: #999;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -150px;
+}
+.tooltip2:hover .tooltiptext {
+    opacity: 1;-moz-opacity: 1;-ms-opacity: 1;-o-opacity: 1;-webkit-opacity: 1;
+	filter: alpha(opacity=100);
+	-webkit-transition:all 0.4s ease;
 }
