--- a/styles/style.css
+++ b/styles/style.css
@@ -145,3 +145,21 @@ a:hover{
 	filter: alpha(opacity=100);
 	-webkit-transition:all 0.4s ease;
 }
+
+@-webkit-keyframes pulse {
+    0% { -webkit-transform: scale(1); }
+    50% { -webkit-transform: scale(1.1); }
+    100% { -webkit-transform: scale(1); }
+}
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    100% { transform: scale(1); }
+}
+
+
+div#menu li i{
+	animation: pulse;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+}
